--- a/www/index.html
+++ b/www/index.html
@@ -4,5 +4,5 @@
     let hash = (new URLSearchParams(location.search)).get('hash');
   </script>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-  <script src="main.min.js"></script>
+  <script src="https://raw.githack.com/pschall42/mandala-effect/master/www/main.min.js"></script>
 </body>
